# advent-of-code

./: .gitignore  .gitmodules  Cargo.toml  bench.rs.tt  puzzle.rs.tt  template.rs.tt  template.sh
.cargo/: config.toml
2023/: bench.rs.tt  create-puzzle.nu  puzzle.rs.tt  rust-toolchain.toml
2023/benches/: main.rs
2023/benches/puzzles/: mod.rs
2023/benches/puzzles/year2023/: day1.rs  day11.rs  day13.rs  day15.rs  day16.rs  day17.rs  day2.rs  day5.rs  day7.rs  mod.rs
2023/src/puzzles/year2023/: day1.rs  day10.rs  day14.rs  day16.rs  day3.rs  day7.rs  day8.rs
2023/src/puzzles/year2023/day6/: part1.txt
2024/: Cargo.toml  rust-toolchain.toml
2024/.cargo/: config.toml
2024/days/day1/: Cargo.toml
2024/days/day1/src/: lib.rs  part1.rs  part2.rs
2024/days/day2/: Cargo.toml
2024/days/day2/src/: lib.rs  part1.rs  part2.rs
2024/days/day3/: Cargo.toml
2024/days/day3/src/: lib.rs  part1.rs  part2.rs
2024/days/day4/: Cargo.toml
2024/days/day4/src/: lib.rs  part1.rs  part2.rs
2024/days/day5/: Cargo.toml
2024/days/day5/src/: lib.rs  part1.rs  part2.rs
2024/days/day6/: Cargo.toml
2024/days/day6/src/: lib.rs  part1.rs  part2.rs
2024/src/: lib.rs  main.rs  narray.rs  nindex.rs  range.rs
2024/template/: Cargo.toml  cargo-generate.toml
2024/template/src/: lib.rs  part1.rs  part2.rs
benches/puzzles/year2023/: day10.rs  day12.rs  day14.rs  day3.rs  day4.rs  day6.rs  day8.rs  day9.rs  mod.rs
src/: iter.rs  lib.rs  main.rs  parse.rs  puzzle.rs
src/collections/: mod.rs
src/collections/forest/: arena.rs  mod.rs  node.rs  tree.rs
src/collections/forest/tree/: concurrent.rs  iter.rs  mod.rs
src/collections/nodes/: cursor.rs  link.rs  mod.rs  pool.rs
src/collections/rangemap/: interval.rs  mod.rs
src/puzzles/year2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
