[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["Shirotha"]



[dependencies]
dialoguer = { version = "0.11.0", features = [] }
inventory = "0.3.13"
indoc = "2.0.4"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
itertools = "0.12.0"
nom = "7.1.3"

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "main"
harness = false

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3