[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["Shirotha"]



[dependencies]
#dialoguer = { version = "0.11.0", features = [] }
inventory = "0.3.13"
indoc = "2.0.4"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
itertools = "0.12.0"
sorted-iter = "0.1.11"
nom = "7.1.3"
smallvec = { version = "1.11.2", features = ["union", "const_generics", "const_new", "specialization", "may_dangle"] }
tap = "1.0.1"
rayon = "1.8.0"
clap = { version = "4.4.10", features = ["derive"] }

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "main"
harness = false