[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["Shirotha"]

[dependencies]
#dialoguer = { version = "0.11.0", features = [] }
inventory = "0.3.13"
ndarray = { version = "0.15.6", features = ["std", "rayon"] }
indoc = "2.0.4"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
itertools = "0.12.0"
sorted-iter = "0.1.11"
nom = "7.1.3"
smallvec = { version = "1.11.2", features = ["union", "const_generics", "const_new", "specialization", "may_dangle"] }
tap = "1.0.1"
rayon = "1.8.0"
num = "0.4.1"
glam = { version = "0.24.2", features = ["std", "core-simd", "debug-glam-assert"] }
num-traits = "0.2.17"
clap = { version = "4.4.10", features = ["derive"] }
bit-vec = "0.6.3"
#partial-borrow = "1.0.1"
easy-ext = "1.0.1"
cc-traits = { version = "2.0.0", features = ["std", "smallvec"] }
petgraph = "0.6.4"

[dev-dependencies]
divan = "0.1.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "main"
harness = false
