[workspace]
resolver = "2"
members = [
  "days/*"
]

[workspace.package]
authors = ["Shirotha"]
version = "0.1.0"
edition = "2024"

[package]
name = "advent-of-code"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
itertools = "0.13.0"
num-traits = "0.2.19"

[workspace.dependencies]
nom = "7.1.3"
